--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.2.0",
     "react-headless-accordion": "^1.0.2",
     "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3",
     "sass": "^1.63.4",
     "swiper": "^9.4.1"
   },
